--- a/BookBase/templates/home.html
+++ b/BookBase/templates/home.html
@@ -5,10 +5,17 @@
 
 {% block content %}
 {% if user.is_authenticated %}
+
   Hi {{ user.username }}!
  <p><a href="{% url 'logout' %}">logout</a></p>
+
+<a href="{% url 'sell' %}"><button>SELL</button></a>
+
+
+
 {% else %}
   <p>You are not logged in</p>
   <a href="{% url 'login' %}">login</a>
+
 {% endif %}
 {% endblock %}
