--- a/BookBase/templates/registration/signup.html
+++ b/BookBase/templates/registration/signup.html
@@ -90,6 +90,17 @@
 								Sign Up
 							</button>
 						</div>
+						</div>
+					<br>
+						<div class="container-login100-form-btn">
+						<div class="wrap-login100-form-btn">
+							<div class="login100-form-bgbtn"></div>
+							<a href="{% url 'login' %}">
+							<button class="login100-form-btn">
+								Login
+							</button>
+								</a>
+						</div>
 					</div>
 				</form>
 			</div>
