--- a/BookBase/templates/sell.html
+++ b/BookBase/templates/sell.html
@@ -73,6 +73,14 @@
                                   </div>
                         </div>
                     </li>
+                    <li id="li_4" >
+                        <label class="description" for="element_3">Upload Image </label>
+                        <div>
+                            <input type="file" name="myfile" accept="image/*"  >
+                        </div>
+                        <p class="guidelines" id="guide_4"><small>Upload Book Image</small></p>
+                    </li>
+
                     <li class="buttons">
                         <input id="saveForm" class="button_text" type="submit" name="submit" value="Submit" />
                     </li>
