--- a/BookBase/templates/home.html
+++ b/BookBase/templates/home.html
@@ -15,7 +15,7 @@
 
 {% else %}
   <p>You are not logged in</p>
-  <a href="{% url 'login' %}">login</a>
+  <a href="{% url 'login' %}">Login</a>
 
 {% endif %}
 {% endblock %}
