--- a/BookBase/templates/sell2.html
+++ b/BookBase/templates/sell2.html
@@ -5,9 +5,9 @@
   <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <title>BOOKBANK</title>
-        <link rel="stylesheet" type="text/css" href="{% static 'form/view.css' %}" media="all">
+<!--        <link rel="stylesheet" type="text/css" href="{% static 'form/view.css' %}" media="all">-->
         <script type="text/javascript" src="{% static 'form/jquery.min.js' %}"></script>
-        <script type="text/javascript" src="{% static 'form/view.js' %}"></script>
+<!--        <script type="text/javascript" src="{% static 'form/view.js' %}"></script>-->
         <script>
     function sendTitle(){
     var title = document.getElementById('id_title').value
@@ -18,8 +18,6 @@
         },
         success: function (data) {
             document.getElementById('avg').innerHTML = data["avg"];
-            document.getElementById('min').innerHTML = data["min"];
-            document.getElementById('max').innerHTML = data["max"];
             document.getElementById('plotImage').innerHTML= data["imagePath"];
             console.log(data["imagePath"])
         }
@@ -35,8 +33,7 @@
   {{ form.as_p }}
   <input id="checkPrice" class="button_text" type="button" value="Check Price" onclick="sendTitle()"/>
                                   <p id="avg"></p>
-                                  <p id="min"></p>
-                                  <p id="max"></p>
+
                                   <div id="plotImage" >
 
 
