--- a/BookBase/templates/home.html
+++ b/BookBase/templates/home.html
@@ -10,6 +10,7 @@
  <p><a href="{% url 'logout' %}">logout</a></p>
 
 <a href="{% url 'sell' %}"><button>SELL</button></a>
+<a href="{% url 'buy' %}"><button>BUY</button></a>
 
 
 
