--- a/BookBase/templates/registration/buy.html
+++ b/BookBase/templates/registration/buy.html
@@ -1,9 +1,36 @@
+{% load static %}
+
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <script type="text/javascript" src="{% static 'form/jquery.min.js' %}"></script>
+<!--        <script type="text/javascript" src="{% static 'form/view.js' %}"></script>-->
+        <script>
+            function contactSeller(id,user_id){
+
+                $.ajax({
+                    url: 'buy/',
+                    data : {
+                        'id': id,
+                        'user_id':user_id
+                    },
+                    success: function (data) {
+                                        alert("Seller Contacted Successfully with id " + data["id"])
+
+                    }
+                });
+
+        }
+
+
+    </script>
+
+
 </head>
+
 <body>
 
 <form name="bufform" action="" method="POST">
@@ -12,7 +39,7 @@
     <input type="text" name="book" placeholder="Enter book name">
 <button type="submit" >SEARCH</button><br>
 {% for pair in data %}
-        <p>{{ pair.title }} ========== {{ pair.price }}========={{pair.auth}}========{{pair.descp}} ---->  <img src="{{pair.img.url}}" alt="{{ pair.title }}" height="20%" width="20%"><br></p>
+        <p>{{ pair.title }} ========== {{ pair.price }}========={{pair.auth}}========{{pair.descp}} ---{{pair.add_id}}---->  <img src="{{pair.img.url}}" alt="{{ pair.title }}" height="20%" width="20%"><input type="button" value="Contact Seller" onclick="contactSeller({{pair.add_id}},{{user.id}})"><br></p>
 {% endfor %}
 
 </form>
