--- a/BookBase/templates/registration/signup.html
+++ b/BookBase/templates/registration/signup.html
@@ -58,6 +58,11 @@
 						<input class="input100" type="email" name="email" maxlength="254" id="id_email"  placeholder="Type your Email">
 						<span class="focus-input100" data-symbol="&#xf15a;"></span>
 					</div>
+					<div class="wrap-input100 validate-input" data-validate="Phone Number is required">
+						<span class="label-input100">Phone Number</span>
+						<input class="input100" type="text" name="phoneNo" maxlength="254" id="id_phoneNo"  placeholder="Type your Phone Number">
+						<span class="focus-input100" data-symbol="&#xf15a;"></span>
+					</div>
 					
 					<div class="wrap-input100 validate-input" data-validate="College name is required">
 						<span class="label-input100">College Name</span>
