--- a/BookBase/templates/home.html
+++ b/BookBase/templates/home.html
@@ -1,7 +1,9 @@
 <!-- templates/home.html -->
-{% extends 'header.html' %}
 
-{% block title %}Home{% endblock %}
+{% block title %}
+Home
+</title>
+{% endblock %}
 
 {% block content %}
 {% if user.is_authenticated %}
