--- a/BookBase/templates/signup.html
+++ b/BookBase/templates/signup.html
@@ -3,6 +3,7 @@
 <head>
    {% block title  %}
    BookBase SignUp
+	</title>
    {% endblock %}
 </head>
 {%  block body %}
@@ -82,7 +83,6 @@
 	<div id="dropDownSelect1"></div>
 	
 <!--===============================================================================================-->
-	<script src="{% static 'user/signup/vendor/jquery/jquery-3.2.1.min.js' %}"></script>
 <!--===============================================================================================-->
 	<script src="{% static 'user/signup/vendor/animsition/js/animsition.min.js' %}"></script>
 <!--===============================================================================================-->
