--- a/BookBase/templates/sell2.html
+++ b/BookBase/templates/sell2.html
@@ -1,19 +1,20 @@
 {%extends 'base.html' %}
 {% load static %}
-<head>
    {% block title  %}
    BookBase SignUp
+</title>
    {% endblock %}
 
 </head>
 
-<form method="post" enctype="multipart/form-data">
+<form method="post" enctype="multipart/form-data" >
   {% csrf_token %}
   {{ form.as_p }}
 
   <button type="submit">Submit New Post</button>
 
 </form>
+
 {%  block body %}
 	<div class="limiter">
 		<div class="container-login100">
@@ -21,12 +22,12 @@
 				<form class="login100-form validate-form" enctype="multipart/form-data" method="POST">
 					{% csrf_token %}
 					<span class="login100-form-title p-b-49">
-						Sign Up
+						Post Advertisement
 					</span>
 
 					<div class="wrap-input100 validate-input m-b-23" data-validate = "Title is required">
 						<span class="label-input100">Title</span>
-						<input class="input100" type="text" name="username" maxlength="150" required id="id_title" placeholder="Type your book title">
+						<input class="input100" type="text" name="title" maxlength="150" required id="id_title" placeholder="Type your book title">
 						<span class="focus-input100" data-symbol="&#xf206;"></span>
 					</div>
 
@@ -34,49 +35,44 @@
 
 					<div class="wrap-input100 validate-input" data-validate="Author is required">
 						<span class="label-input100">Author</span>
-						<input class="input100" type="text" name="password" required id="id_author" placeholder="Type your book's Author name">
+						<input class="input100" type="text" name="author" required id="id_author" placeholder="Type your book's Author name">
 						<span class="focus-input100" data-symbol="&#xf190;"></span>
 					</div>
 
-					<div class="wrap-input100 validate-input" data-validate="Description is required">
+					<div class="wrap-input100 " >
 						<span class="label-input100">Description</span>
-						<input class="input100" type="text" name="email" maxlength="254" id="id_description"  placeholder="Type your book's Description">
+						<input class="input100" type="text" name="description" maxlength="254" id="id_description"  placeholder="Type your book's Description">
 						<span class="focus-input100" data-symbol="&#xf15a;"></span>
 					</div>
+
 					<div class="wrap-input100 validate-input" data-validate="Price is required">
 						<span class="label-input100">Price</span>
-						<input class="input100" name="phoneNo" maxlength="254" id="id_price" placeholder="Enter the price" style="width: 60%;" type="number">
+						<input class="input100" name="price" maxlength="254" id="id_price" placeholder="Enter the price" style="width: 60%;" type="number">
 						<span class="focus-input100" data-symbol="&#xf15a;"></span>
 					</div>
 
 					<div class="wrap-input100 validate-input" data-validate="">
 						<span class="label-input100">Book Image</span>
 
-					 <input style="margin: 26px;margin-top: 25px;margin-left: 5px;" class="btn btn-primary" required="" id="id_bookImage" accept="image/*" type="file">
-
-
+					 <input style="margin: 26px;margin-top: 25px;margin-left: 5px;" class="btn btn-primary" name="bookImage" required="" id="id_bookImage" accept="image/*" type="file">
 
 					</div>
 
 					<div class="text-right p-t-8 p-b-31">
 					</div>
-                    <input id="checkPrice" class="button_text " type="button" value="Check Price" onclick="sendTitle()"/>
+                    <input id="checkPrice" class="button_text opener btn btn-primary" type="button" value="Check Price" onclick="sendTitle()"/>
 
-                                 <p id="avg"></p>
-
-                                  <div id="plotImage" >
-                                  </div>
-
-<div id="dialog" title="Basic dialog">
-  <p>This is the default dialog which is useful for displaying information. The dialog window can be moved, resized and closed with the 'x' icon.</p>
-</div>
-
+						<div id = "dialog" title = "BookBase Price Suggester" >
+								<p id="avg"></p>
+							  <div id="plotImage" >
+							  </div>
+						</div>
 
 					<div class="container-login100-form-btn">
 						<div class="wrap-login100-form-btn">
 							<div class="login100-form-bgbtn"></div>
 							<button class="login100-form-btn" type="submit" >
-								Sign Up
+								Sumbit
 							</button>
 						</div>
 						</div>
@@ -118,10 +114,39 @@
             document.getElementById('avg').innerHTML = data["avg"];
             document.getElementById('plotImage').innerHTML= data["imagePath"];
             console.log(data["imagePath"])
-            alert()
+
         }
     });
 }
 </script>
+ <script>
+         $(function() {
+            $( "#dialog-1" ).dialog({
+               autoOpen: false,
+            });
 
+         $('#dialog-1').
+	    	dialog('open').
+    		dialog('option', 'width',   'auto').
+    		dialog('option', 'height',  'auto');
+
+            $( ".opener" ).click(function() {
+               $( "#dialog-1" ).dialog( "open" );
+            });
+         });
+
+
+         $(function() {
+		  $("#dialog").dialog({
+			autoOpen : false, modal : true, show : "blind", hide : "blind", width : 700
+		  });
+
+
+		  $(".opener").click(function() {
+			$("#dialog").dialog("open");
+			return false;
+		  });
+		});
+      </script>
 {% endblock %}
+
